Rename and fix paths for utils

--- a/examples/notebooks/StructuredOutput.ipynb
+++ b/examples/notebooks/StructuredOutput.ipynb
@@ -200,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import json\n",
-    "from prompttools.utils import python\n",
+    "from prompttools.utils import validate_json\n",
+    "from prompttools.utils import validate_python\n",
     "\n",
     "def extract_responses(output) -> str:\n",
     "    rsps = [choice[\"text\"].strip() for choice in output[\"choices\"]]\n",
@@ -215,7 +215,7 @@
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    validations = [json.validate(response) for response in extract_responses(results)]\n",
+    "    validations = [validate_json.validate(response) for response in extract_responses(results)]\n",
     "    return min(validations)\n",
     "\n",
     "def is_python(\n",
@@ -225,7 +225,7 @@
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    validations = [python.validate(response) for response in extract_responses(results)]\n",
+    "    validations = [validate_python.validate(response) for response in extract_responses(results)]\n",
     "    return min(validations)\n"
    ]
   },
