--- a/examples/notebooks/Untitled.ipynb
+++ b/examples/notebooks/Untitled.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "780dc3bf",
    "metadata": {},
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -27,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52881369",
    "metadata": {},
@@ -45,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -53,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -69,10 +75,11 @@
    "source": [
     "import os\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"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\""
+    "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -93,6 +100,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -101,6 +109,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -278,6 +287,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
