Removing Hegel API key references

--- a/examples/notebooks/LlamaCppExperiment.ipynb
+++ b/examples/notebooks/LlamaCppExperiment.ipynb
@@ -36,29 +36,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5edba05a",
-   "metadata": {},
-   "source": [
-    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use real Hegel AI API key, so for now we'll set them to empty strings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ed4e635e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
    "source": [
-    "Then we'll import the relevant `prompttools` modules to setup our experiment."
+    "We'll import the relevant `prompttools` modules to setup our experiment."
    ]
   },
   {
