--- a/examples/notebooks/LlamaHeadToHead.ipynb
+++ b/examples/notebooks/LlamaHeadToHead.ipynb
@@ -57,7 +57,7 @@
    "id": "5edba05a",
    "metadata": {},
    "source": [
-    "Next, we'll need to set our API keys. Since we want to use GPT-4 for auto-eval, we need to set that one. We won't be using the Hegel AI API key for this example."
+    "Next, we'll need to set our API keys. Since we want to use GPT-4 for auto-eval, we need to set that one."
    ]
   },
   {
@@ -68,7 +68,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
