--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -39,7 +39,7 @@
    "id": "5edba05a",
    "metadata": {},
    "source": [
-    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use real HuggingFaceHub or Hegel AI API keys, so for now we'll set them to empty strings."
+    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use a real HuggingFaceHub key, so for now we'll set them to empty strings."
    ]
   },
   {
@@ -51,7 +51,6 @@
    "source": [
     "import os\n",
     "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['HUGGINGFACEHUB_API_TOKEN'] = \"\""
    ]
   },
