GPT4 vs Llama experiment

--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -23,10 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -35,11 +38,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
    "source": [
-    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use a real OpenAI key, so for now we'll set them to empty strings."
+    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use real OpenAI or Hegel AI API keys, so for now we'll set them to empty strings."
    ]
   },
   {
@@ -50,11 +54,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
+    "os.environ['DEBUG']=\"\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -74,6 +79,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -82,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -107,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -125,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -133,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
@@ -171,6 +181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -187,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"similar_to_expected\", measure_similarity)\n"
+    "experiment.evaluate(\"similar_to_expected\", measure_similarity)"
    ]
   },
   {
@@ -201,14 +212,6 @@
    "source": [
     "experiment.visualize()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0007a1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
