--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "780dc3bf",
    "metadata": {},
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -27,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52881369",
    "metadata": {},
@@ -45,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -53,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -73,6 +79,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -95,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -103,6 +111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cd0bae8",
    "metadata": {},
@@ -143,6 +152,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -157,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_paths = ['/Users/stevenkrawczyk/Downloads/llama-2-7b-chat.ggmlv3.q2_K.bin']  # Download from https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/tree/main\n",
+    "model_paths = ['/your/path/to/llama-2-7b-chat.ggmlv3.q2_K.bin']  # Download from https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/tree/main\n",
     "temperatures = [1.0]\n",
     "call_params = dict(temperature=temperatures)\n",
     "llama_experiment = LlamaCppExperiment(model_paths, selectors, call_params=call_params)"
@@ -176,6 +186,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c3162e6",
    "metadata": {},
@@ -207,6 +218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2ceb662a",
    "metadata": {},
@@ -246,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
