--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -148,7 +148,7 @@
     "\"\"\"\n",
     "Is 7 a prime number?\n",
     "\"\"\"]\n",
-    "selectors = [PromptSelector(instructions[i], inputs[i]) for i in range(3)]"
+    "selectors = [PromptSelector(instructions[i], inputs[i]) for i in range(len(inputs))]"
    ]
   },
   {
