--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "780dc3bf",
    "metadata": {},
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -27,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "52881369",
    "metadata": {},
@@ -45,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -53,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -69,10 +75,11 @@
    "source": [
     "import os\n",
     "os.environ['DEBUG'] = \"\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"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\""
+    "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -95,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -103,6 +111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cd0bae8",
    "metadata": {},
@@ -150,6 +159,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -183,6 +193,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c3162e6",
    "metadata": {},
@@ -264,6 +275,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2ceb662a",
    "metadata": {},
@@ -303,6 +315,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -557,6 +570,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36fa7a07",
    "metadata": {},
